<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ugv</name>
  <version>2.1.0</version>
  <description>Running robot fmu with fmi_adaptor</description>

  <maintainer email="sbonab7@gmail.com">Ralph Lange</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>fmi_adapter</build_depend>

  <exec_depend>fmi_adapter</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
